--- a/VUE js/exo_1/index.html
+++ b/VUE js/exo_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <!-- <script src="./js/main.js" type="module"></script> -->
+    <script src="./js/main.js" type="module"></script>
     <title>coucou  vue js</title>
 </head>
 <body>
