--- a/cereals/index.html
+++ b/cereals/index.html
@@ -23,16 +23,16 @@
                 <fieldset>
                     <legend>Filter</legend>
                     <legend>Nutriscore</legend>
-                    <label for="">A</label>
+                    <label>A</label>
                     <input type="checkbox" v-model="checked">
 
-                    <label for="">B</label>
+                    <label>B</label>
                     <input type="checkbox" v-model="checked">
 
-                    <label for="">C</label>
+                    <label>C</label>
                     <input type="checkbox" v-model="checked">
 
-                    <label for="">D</label>
+                    <label>D</label>
                     <input type="checkbox" v-model="checked">
 
                     <label for="">E</label>
