--- a/chargement_donnee/index.html
+++ b/chargement_donnee/index.html
@@ -29,10 +29,10 @@
 
                     <td>{{employe.id}}</td>
                     <td>{{employe.employee_name}}</td>
-                    <td>{{emailEmployees.email}}</td>
+                    <td>{{employe.email}}</td>
                     <td>{{employe.employee_salary}}</td>
                     <td>{{employe.employee_age}}</td>
-                    <td>{{employe.profile_image}}</td>
+                    
                     <td>
                         <button>Duplicate</button>
                         <button>Delete</button>
