--- a/chargement_donnee/index.html
+++ b/chargement_donnee/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+
     <link rel="stylesheet" href="./assets/css/styles.css">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./assets/js/main.js" type="module"></script>
     <title>exo 1</title>
 </head>
+
 <body>
     <div id="app">
         <h1>Employees</h1>
@@ -24,23 +26,28 @@
                     <th>Actions</th>
                 </tr>
             </thead>
-            <tbody >
+            <tbody>
                 <tr v-for="employe of employees">
 
                     <td>{{employe.id}}</td>
                     <td>{{employe.employee_name}}</td>
                     <td>{{employe.email}}</td>
-                    <td>{{employe.employee_salary}}</td>
+                    <td>{{employe.salary}}</td>
                     <td>{{employe.employee_age}}</td>
-                    
+
                     <td>
                         <button>Duplicate</button>
                         <button>Delete</button>
                     </td>
-
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>{{ totauxSalary }}</td>
+                </tr>
+            </tfoot>
         </table>
     </div>
 </body>
+
 </html>
