--- a/chargement_donnee/index.html
+++ b/chargement_donnee/index.html
@@ -43,7 +43,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td>{{ totauxSalary }}</td>
+                    <td>{{ totauxSalary }} ok</td>
                 </tr>
             </tfoot>
         </table>
